--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -40,48 +40,48 @@
                         <button type="submit" class="btn bg-[#FF5C00] hover:bg-[#E65300]">SIGN IN</button>
                     </div>
                     <!-- Divider -->
-            <div class="divider my-6">OR USE</div>
-            <div class="text-center">
-                <!-- Facebook -->
-                <button
-                  type="button"
-                  data-twe-ripple-init
-                  data-twe-ripple-color="light"
-                  class="mb-2 inline-block rounded bg-[#1877f2] px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg">
-                  <span class="[&>svg]:h-4 [&>svg]:w-4">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="currentColor"
-                      viewBox="0 0 320 512">
-                      <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
-                      <path
-                        d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z" />
-                    </svg>
-                  </span>
-                </button>
-                <!-- Google -->
-                <button
-                  type="button"
-                  data-twe-ripple-init
-                  data-twe-ripple-color="light"
-                  class="mb-2 inline-block rounded bg-[#ea4335] px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg">
-                  <span class="[&>svg]:h-4 [&>svg]:w-4">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="currentColor"
-                      viewBox="0 0 488 512">
-                      <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
-                      <path
-                        d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z" />
-                    </svg>
-                  </span>
-                </button>
-            </div>
-            <!-- Sign Up Link -->
-            <div class="text-center">
-                <p class="text-gray-600 mb-5">Don't have an account?</p>
-                <a href="#" class="btn btn-outline btn-secondary">SIGN UP</a>
-            </div>
+                    <div class="divider my-6">OR USE</div>
+                    <div class="text-center">
+                        <!-- Facebook -->
+                        <button
+                        type="button"
+                        data-twe-ripple-init
+                        data-twe-ripple-color="light"
+                        class="mb-2 inline-block rounded bg-[#1877f2] px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg">
+                        <span class="[&>svg]:h-4 [&>svg]:w-4">
+                            <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="currentColor"
+                            viewBox="0 0 320 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
+                            <path
+                                d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z" />
+                            </svg>
+                        </span>
+                        </button>
+                        <!-- Google -->
+                        <button
+                        type="button"
+                        data-twe-ripple-init
+                        data-twe-ripple-color="light"
+                        class="mb-2 inline-block rounded bg-[#ea4335] px-6 py-2.5 text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg">
+                        <span class="[&>svg]:h-4 [&>svg]:w-4">
+                            <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="currentColor"
+                            viewBox="0 0 488 512">
+                            <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
+                            <path
+                                d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z" />
+                            </svg>
+                        </span>
+                        </button>
+                        </div>
+                        <!-- Sign Up Link -->
+                        <div class="text-center">
+                            <p class="text-gray-600 mb-5">Don't have an account?</p>
+                            <a href="#" class="btn btn-outline btn-secondary">SIGN UP</a>
+                        </div>
                 </form>
             </div>
         </div>
@@ -93,14 +93,7 @@
     </div>
 </div>
 <script>
-    // Initialization for ES Users
-    import {
-        Ripple,
-        initTWE,
-      } from "tw-elements";
-      
-    initTWE({ Ripple });
-
+    // Login Functionality
     document.getElementById('login-form').addEventListener('submit', function(e) {
         e.preventDefault();
         
